ap 테마 수정중

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  <link rel="stylesheet" href="/assets/css/grid.css">
+  <link rel="stylesheet" href="/assets/css/custom.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
   
   <!-- Font Awesome -->
@@ -13,18 +15,6 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon.ico" | relative_url }}">
-
-  <style>
-      mark {
-        padding: 2px 4px;
-        font-size: 90%;
-        color: #fff;
-        background-color: #333;
-        border-radius: 3px;
-        -webkit-box-shadow: inset 0 -1px 0 rgb(0 0 0 / 25%);
-        box-shadow: inset 0 -1px 0 rgb(0 0 0 / 25%);
-      }
-  </style>
   <!-- Google Analytics -->
   {% if site.google_analytics %}
   <script>
