--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -11,7 +11,7 @@ body {
 }
 
 html {
-  font-family: $serif-primary;
+  font-family: "Helvetica Neue","Segoe UI",Helvetica,Arial,sans-serif;
   font-size: 14px;
 
   @media (min-width: 600px) {
