--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -239,3 +239,15 @@
   </a>
 </li>
 {% endif %}
+
+{% if site.social.tistory %}
+<li>
+  <a href="https://{{ site.social.tistory }}.tistory.com/" title="{{ site.social.default_txt }} Tistory">
+    <span class="fa-stack fa-lg">
+      <i class="fa fa-circle fa-stack-2x"></i>
+      <i class="fa custom-icon-tistory fa-stack-1x fa-inverse"></i>
+    </span>
+  </a>
+</li>
+{% endif %}
+
