--- a/_sass/layouts/_home.scss
+++ b/_sass/layouts/_home.scss
@@ -1,4 +1,9 @@
 .about {
+  table {
+    width: 100%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
   .profile {
     text-align: center;
     margin-top: 3%;
@@ -25,7 +30,18 @@
       }
     }
   }
-
+  .social-layer {
+    .custom-icon-tistory:before {
+      content: "";
+      display: inline-block;
+      background: url("/assets/img/tistory_logo.png") no-repeat center center;
+      background-size: 0.867em;
+      filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(153deg) brightness(102%) contrast(105%);
+      width: 1em;
+      height: 1em;
+      vertical-align: middle;
+    }
+  }
   &-icon {
     margin-left: 1.3rem;
     line-height: 2rem;
