update: menu custom

--- a/src/components/base-footer.astro
+++ b/src/components/base-footer.astro
@@ -1,20 +1,14 @@
 ---
-import { SITE } from '~/consts';
 import { useI18n } from '~/libs/i18n';
 
 const { t } = useI18n(Astro.url);
 ---
 
 <footer class="container my-half-page">
-  <div class="mx-auto max-w-content font-serif text-sm text-second">
+  <div class="mx-auto max-w-content font-serif text-xs text-second">
     <div class="flex items-center">
-      <div>
-        Copyright © <a class="link" href="/">{t('index.name')}</a>
-      </div>
-      <div class="ml-auto" aria-label="More on this site">
-        <a class="link whitespace-nowrap" href={SITE.source} target="_blank">
-          {t('footer.source')}
-        </a>
+      <div class="mx-auto" aria-label="More on this site">
+        Forked from <a class="link" href={t('footer.copyright-url')} target="_blank">@{t('footer.copyright')}</a>
       </div>
     </div>
   </div>
