--- a/src/components/base-header.astro
+++ b/src/components/base-header.astro
@@ -1,26 +1,25 @@
 ---
 import SearchButton from '~/components/ui/search-button';
-
-import LanguageDropdown from './language-dropdown.svelte';
-import ThemeDropdown from './theme-dropdown.svelte';
+import HeaderNavButton from '~/components/ui/navigation-button';
+import ThemeToggleButton from './theme-toggle';
 
 type Props = {
   title: string;
   description?: string;
-  noI18n?: boolean;
+  nav?: 'home' | 'back' | 'none';
 };
 
 const { props, url } = Astro;
-const { title, description, noI18n } = props;
+const { title, description, nav = 'home' } = props;
 ---
 
 <div class="mb-7 font-serif">
+  <HeaderNavButton client:load iconType={nav} />
   <div class="flex items-center justify-between">
     <h1 class="-mb-0.5 font-semibold leading-7 text-heading">{title}</h1>
     <div class="flex gap-1">
       <SearchButton client:load />
-      {!noI18n && <LanguageDropdown client:load {url} align="end" />}
-      <ThemeDropdown client:load align="end" />
+      <ThemeToggleButton client:load />
     </div>
   </div>
   {description && <p class="text-sm text-second">{description}</p>}
