--- a/src/layouts/post-layout.astro
+++ b/src/layouts/post-layout.astro
@@ -49,7 +49,7 @@ const { Content } = await post.render();
       client:load
     />
   </BaseLeftAside>
-  <BaseHeader {title} description={format(date, 'MMM dd, yyyy')} {noI18n}>
+  <BaseHeader {title} description={format(date, 'MMM dd, yyyy')} nav="back">
     <BaseNav class="mt-1.5" highlightNavItem={postType} />
   </BaseHeader>
   <article data-animate data-animate-speed="fast" class="mdx mt-14">
