--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const { p, t } = useI18n(url);
 ---
 
 <MainLayout class="font-serif">
-  <BaseHeader title={`${t('index.name')} ﹒ bepyan`} />
+  <BaseHeader title={`${t('index.name')} ﹒ leeworms`} nav='none' />
   <div data-animate data-animate-speed="slow">
     {/* 소개 */}
     <div class="my-7" set:html={t('index.desc')} />
