--- a/src/components/base-head.astro
+++ b/src/components/base-head.astro
@@ -25,7 +25,7 @@ const imageURL = props.image ?? SITE.image;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" href="/favicon.png" />
+<link rel="icon" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
