--- a/src/components/base-head.astro
+++ b/src/components/base-head.astro
@@ -27,7 +27,7 @@ const imageURL = props.image ?? SITE.image;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
-
+<meta name="google-site-verification" content="wbh8D4MFikYZr8wS58T-HtZPSTee1ySzGXEv6a3TQac" />
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
