--- a/src/components/base-left-aside.astro
+++ b/src/components/base-left-aside.astro
@@ -6,7 +6,7 @@ import { cn } from '~/libs/utils';
   class={cn(
     'fixed left-7 top-page flex max-w-[250px] translate-y-[140px] flex-col',
     'xl:left-1 xl:max-w-[220px] transition-all lg:opacity-0',
-    'md:relative md:top-0 md:-ml-2 md:mb-7 md:translate-x-0 md:opacity-100',
+    'md:relative md:top-0 md:-ml-2 md:translate-x-0 md:opacity-100',
   )}
 >
   <slot />
