--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,14 @@ const { url } = Astro;
 const { p, t } = useI18n(url);
 ---
 
-<MainLayout class="font-serif">
+<MainLayout 
+  class="font-serif"
+  seo={{
+    structuredData: {
+      type: 'person'
+    }
+  }}
+>
   <BaseHeader title={`${t('index.name')} ﹒ leeworms`} nav='none' />
   <div class="break-keep" data-animate data-animate-speed="slow">
     {/* 소개 */}
